k8s/practice/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: default
  labels:
    name: svc
    tier: frontend-svc
spec:
  ports:
  - nodePort: 30080
    port: 8080
    targetPort: 8080
  selector:
    name: simple-webapp
  type: NodePort
