k8s/practice/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: test.com
      http:
        paths:
          - path: /api/?(.*)  # this means anything after api
            backend:
              serviceName: webapp-service
              servicePort: 3000  # taken as an example
          - path: /?(.*)
            backend:
              serviceName: app2-svc
              servicePort: 8080
